--- a/vocab-vault/src/App.css
+++ b/vocab-vault/src/App.css
@@ -1,38 +1,41 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+body {
+    padding:60px;
+    display: flex;
+    justify-content: center;
+    align-items: top;
+    height: 100vh;
+    
   }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+  
+  .search-container {
+    display: flex;
+    align-items: center;
+    
+    
   }
-  to {
-    transform: rotate(360deg);
+  
+  .search-container form {
+    display: flex;
+    align-items: center;
+    
   }
-}
+  
+  .search-container input[type="text"] {
+    padding: 12px;
+    border-radius: 4px;
+    border: 1px solid #ccc;
+    
+  }
+  
+  .search-container button {
+    padding: 8px 12px;
+    background-color: #007bff;
+    color: #fff;
+    border: none;
+    border-radius: 4px;
+    margin-left: 8px;
+    cursor: pointer;
+    
+  }
+  
+  
