--- a/vocab-vault/src/App.css
+++ b/vocab-vault/src/App.css
@@ -1,3 +1,7 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@500&display=swap');
+
+
+
 body {
     padding:10px;
     padding-right:500px;
@@ -8,13 +12,14 @@ body {
     height: 200vh;
     position: fixed;
     background-color:#E3C565;
+    color: teal;
+    font-family: 'Roboto Slab', serif;
   }
   
   .search-container {
     display: flex;
     align-items: center;
-    
-    
+  
   }
   
   .search-container form {
@@ -51,8 +56,14 @@ body {
     display: inline-block;
   }
   
-  a:hover, a:active {
-    background-color: #00A68D;
+  /* a:hover, a:active {
+    background-color: black;
+  } */
+   
+
+  * {
+    color: white;
+    font-family: 'Roboto Slab', serif;
+
   }
-  
   
