--- a/vocab-vault/src/styles.css
+++ b/vocab-vault/src/styles.css
@@ -26,7 +26,7 @@ body {
     gap: 1rem;
 }
 .nav a {
-    color: inherit;
+    color: black;
     text-decoration: none;
 }
 .nav li.active {
@@ -34,6 +34,6 @@ body {
 }
 
 .nav li:hover {
-    background-color: white;
+    background-color:#E3C565;
 }
 
